# TOPOS-market

./: .gitignore  DESIGN.md  pyproject.toml
experiments/: __init__.py  configs.py  run_ablation.py
tests/: exemplars.py
tests/acceptance/: conftest.py  test_falsification.py  test_report.py
tests/agent/: conftest.py  test_ablation_isolation.py  test_cycle_order.py  test_determinism.py  test_null_cycles.py  test_realized_ig.py  test_smoke.py
tests/beliefs/: conftest.py  test_core.py  test_eig_matches_monte_carlo.py  test_eig_saturation.py  test_fair_value.py  test_flow_intensity.py  test_forgetting_reinflates.py  test_kalman_calibration.py  test_noisy_tv.py  test_poisson_calibration.py  test_queue_filter.py
tests/contracts/: test_beliefs.py  test_intent.py  test_market.py  test_registry.py  test_rng.py  test_workspace.py
tests/drives/: __init__.py  test_homeostat.py
tests/env/: __init__.py  test_background.py  test_engine.py  test_harness.py
tests/metrics/: test_pipeline_smoke.py  test_stats.py  test_tables.py
tests/motor/: test_compiler.py
tests/proposer/: conftest.py  test_gates.py  test_invariants.py  test_proposer.py  test_selection.py
tests/selfmodel/: conftest.py  test_books.py  test_fill_model.py  test_impact_model.py  test_self_trajectory.py
tests/tripwires/: test_cognitive_view_has_no_pnl.py  test_contracts_frozen.py  test_metrics_importers.py  test_metrics_isolation.py  test_no_learning_frameworks.py  test_no_reward_tokens.py  test_observation_shape.py  test_rng_stream_independence.py
tests/workspace/: conftest.py  (+7 more)
topos/: __init__.py
(+62 files in other folders)
